--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -6,8 +6,15 @@ description: |
 cards:
 - name: Русский
   level: Носитель
-  quote: Родной язык не выбирают
-  description: Почему именно русский?
+  quote: Родной язык не выбирают, но я рад, что это — русский
+  description: |
+
+    В мире много самых разных языков.  Мне достался русский.  Где-то
+    посередине между Европой и Азией.  Соединяет в себе не только
+    западные и восточные традиции, но и традиции сотен народов,
+    населяющих Россию.  Язык с длинной историей.  Язык с богатой
+    культурной и научной традицией.  Пожалуй, отличный вариант.
+
 - name: Английский
   level: C1
   diploma:
@@ -16,15 +23,19 @@ cards:
   link:
     name: EF SET Diploma
     url: https://www.efset.org/cert/MiRbnh
-  quote: Большая часть мира разговаривает на Английском, вернее, на Английских
+  quote: Это не иностранный язык, это международный язык
   description: |
 
-    Причин учить английский более чем достаточно.  Фактически, этот
-    язык стал тем самым связующим звеном для разных народов.
+    Сначала было нужно читать много-много разной документации на
+    английском.  И все это по программированию.  Потом понадобилось
+    искать ответы на вопросы не только в Рунете.  Дальше был New
+    Scientist.  Дальше как-то само собой получилось: подкасты, лекции,
+    видео.  Английский для меня — дверь в мир самых разных стран и
+    народов.
 
 - name: Эсперанто
   level: B1
-  quote: Сделанный человеком язык, который учит понимать другие языки
+  quote: Язык, который учит понимать другие языки
   description: |
 
     Эсперанто был больше экспериментом.  Мне было интересно узнать,
