Educations and certificates

--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,4 +1,4 @@
-header: Дипломы / Квалификации
+header: "Дипломы | Квалификации"
 id: diplomas
 description: |
 
@@ -6,6 +6,7 @@ description: |
   разных областей знаний
 
 cards:
+
 - name: Кандидат технических наук
   speciality: 05.14.08 — Энергоустановки на основе возобновляемых видов энергии
   level: Ученая степень
@@ -13,6 +14,15 @@ cards:
   years: 2014
   quote: Энергия — суть движущая сила мира
   description: |
+
+    Интересно, а можно ли дома сделать ветроустановку, которая будет реально
+    работать?  Пожалуй, тут понадобится изучить строительство,
+    электротехнику, механику и аэродинамику.  А как сделать ее работу
+    эффективной?  Автоматическое управление и поворот лопастей
+    должны справиться с этой задачей.  А можно это сделать всего за
+    три года?  Практика говорит "да".  Изготовить ветроустановку
+    в домашних условиях вполне реально.  Я доказал не только это, но и
+    что можно получать электрическую энергию.
 
 
 - name: Инженер
@@ -25,6 +35,18 @@ cards:
     name: ачгаа.рф
     url: http://ачгаа.рф
   hours: 8262
+  quote: Инженерное дело сопровождает человечество с самого начала
+  description: |
+
+    Инженерная наука — это не о том, как построить дом или машину.
+    Инженерная наука — это о том, как преобразовывать окружающий мир.
+    Именно поэтому мне интересно инженерное дело.  Электричество
+    окружает нас повсюду: начиная от светильников и заканчивая
+    сотовыми телефонами.  Электричество же лежит в основе Интернета.
+    Все большее внимание уделяется повсеместному использованию
+    электричества, например, в электромобилях.  Можно ли изменить
+    мир с помощью электричества?  Однозначно.
+
 
 - name: Экономист-менеджер
   speciality: Экономика и управление на предприятии (агропромышленного комплекса)
@@ -36,6 +58,17 @@ cards:
     name: ачгаа.рф
     url: http://ачгаа.рф
   hours: 9432
+  quote: Знание экономики в современном мире — необходимость
+  description: |
+
+    Экономика говорит о том, куда потратить деньги, когда их мало, а
+    направлений трат — много.  А менеджмент говорит о том как
+    конкретно это сделать.  Вместе они образуют почти идеальную
+    комбинацию.  Экономика учит понимать глобальные и локальные
+    процессы, а менеджмент — управлять своими ресурсами.  Как оценить
+    инновационный проект и вложить в него деньги, чтобы получить
+    максимальный эффект.
+
 
 - name: Профессиональное веб-программирование
   speciality: Профессиональное веб-программирование
@@ -46,3 +79,12 @@ cards:
     name: intuit.ru
     url: https://intuit.ru
   hours: 576
+  quote: Интернет — еще одно чудо света
+  description: |
+
+    Сложно ли устроен современный веб-сайт и насколько трудно сделать
+    простую страницу.  Как сделать удобный для пользователя сайт.  Как
+    сайты работают с базами данных и динамически создают контент для
+    пользователей.  Как изменить внешнее оформление сайта, не затронув
+    содержимого.  Интернет — поистине великая вещь.  Но великой ее
+    делают отдельные сайты.
