--- a/_data/about.yml
+++ b/_data/about.yml
@@ -3,10 +3,14 @@ quote: |
   У меня столько же интересов, сколько огоньков на газовой горелке
 text: |
 
-  С детства меня интересуют самые разные вещи.  Меня интересуют и
+  С детства меня интересуют самые разные штуки.  Меня интересуют и
   люди, и вещи, и идеи.  Поэтому я изучаю и иностранные языки, и
   программирование, и менеджмент.  Кроме теории, я практикую небольшие
   полезные в жизни навыки.  Мне нравится передавать другим все эти
   интересные вещи, поэтому я учу других.  Не представляю своей жизни
   без скетчей.  У меня есть несколько образовательных проектов, а еще
   я занимаюсь индивидуальным консультированием.
+
+traits:
+- Знаю два иностранных языка
+- Имею четыре квалификации по дипломам
