--- a/_data/about.yml
+++ b/_data/about.yml
@@ -12,5 +12,6 @@ text: |
   я занимаюсь индивидуальным консультированием.
 
 traits:
-- Знаю два иностранных языка
-- Имею четыре квалификации по дипломам
+- Кандидат технических наук
+- Два иностранных языка
+- Четыре квалификации по дипломам
