--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -15,26 +15,27 @@ cards:
   quote: Энергия — суть движущая сила мира
   description: |
 
-    Интересно, а можно ли дома сделать ветроустановку, которая будет реально
-    работать?  Пожалуй, тут понадобится изучить строительство,
-    электротехнику, механику и аэродинамику.  А как сделать ее работу
-    эффективной?  Автоматическое управление и поворот лопастей
-    должны справиться с этой задачей.  А можно это сделать всего за
-    три года?  Практика говорит "да".  Изготовить ветроустановку
-    в домашних условиях вполне реально.  Я доказал не только это, но и
-    что можно получать электрическую энергию.
+    Ветер сопровождает человечество на всем пути его истории.  И
+    человек не раз предпринимал попытки подчинить себе эту неукротимую
+    энергию и поставить ее на службу.  Начав c ветряных мельниц и
+    водоподъемных механизмов, мы добрались до производства
+    электрической энергии в колоссальных масштабах.  А можно ли
+    использовать энергию ветра в домашних условиях?  Можно ли сделать
+    домашнюю ветроустановку?  Пожалуй, тут понадобится изучить
+    строительство, электротехнику, механику и аэродинамику.  А можно
+    ли сделать это всего за три года?  Можно.
 
 
 - name: Инженер
   speciality: Электрификация и автоматизация сельского хозяйства
   level: Высшее образование
-  perfect: true
+  perfect: Диплом с отличием
   university:  ФГБОУ ВПО Азово-Черноморская государственная агроинженерная академия
   years: 2006–2011
   link:
     name: ачгаа.рф
     url: http://ачгаа.рф
-  hours: 8262
+  hours: 8262 часа
   quote: Инженерное дело сопровождает человечество с самого начала
   description: |
 
@@ -51,13 +52,13 @@ cards:
 - name: Экономист-менеджер
   speciality: Экономика и управление на предприятии (агропромышленного комплекса)
   level: Высшее образование
-  perfect: true
+  perfect: Диплом с отличием
   university: ФГБОУ ВПО Донской государственный аграрный университет
   years: 2011–2014
   link:
     name: ачгаа.рф
     url: http://ачгаа.рф
-  hours: 9432
+  hours: 9432 часа
   quote: Знание экономики в современном мире — необходимость
   description: |
 
@@ -67,7 +68,8 @@ cards:
     комбинацию.  Экономика учит понимать глобальные и локальные
     процессы, а менеджмент — управлять своими ресурсами.  Как оценить
     инновационный проект и вложить в него деньги, чтобы получить
-    максимальный эффект.
+    максимальный эффект.  Куда вложить свое ограниченное время, чтобы
+    получить максимальное количество денег?
 
 
 - name: Профессиональное веб-программирование
@@ -78,7 +80,7 @@ cards:
   link:
     name: intuit.ru
     url: https://intuit.ru
-  hours: 576
+  hours: 576 часов
   quote: Интернет — еще одно чудо света
   description: |
 
