--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,6 +1,6 @@
 photo_file: photo.jpg
 quote: |
-  У меня столько же интересов, сколько огоньков на газовой горелке
+  У меня столько же интересов, сколько огоньков на газовой конфорке
 text: |
 
   С детства меня интересуют самые разные штуки.  Меня интересуют и
