New language levels

--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -31,10 +31,11 @@ cards:
     искать ответы на вопросы не только в Рунете.  Дальше был New
     Scientist.  Дальше как-то само собой получилось: подкасты, лекции,
     видео.  Английский для меня — дверь в мир самых разных стран и
-    народов.
+    народов.  По некоторым данным 94% всех разговоров и переписок на
+    английском языке включают хотя бы одного не-носителя.
 
 - name: Эсперанто
-  level: B1
+  level: B1/B2
   quote: Язык, который учит понимать другие языки
   description: |
 
