--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -38,3 +38,9 @@ list:
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
   description: Как заставить компьютер работать без Windows
+
+- title: Работа в системе LaTeX
+  date: март 2022
+  place: Национальный открытый университет ИНТУИТ
+  value: 72 часа
+  description: Лучшая в мире издательская система
