--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -19,11 +19,18 @@ cards:
     человек не раз предпринимал попытки подчинить себе эту неукротимую
     энергию и поставить ее на службу.  Начав c ветряных мельниц и
     водоподъемных механизмов, мы добрались до производства
-    электрической энергии в колоссальных масштабах.  А можно ли
-    использовать энергию ветра в домашних условиях?  Можно ли сделать
-    домашнюю ветроустановку?  Пожалуй, тут понадобится изучить
+    электрической энергии в колоссальных масштабах.
+
+    Можно ли использовать энергию ветра в домашних условиях?  Можно ли
+    сделать домашнюю ветроустановку?  Пожалуй, тут понадобится изучить
     строительство, электротехнику, механику и аэродинамику.  А можно
     ли сделать это всего за три года?  Можно.
+
+    Подготовка и защита кандидатской диссертации — отличное время,
+    чтобы научиться анализировать проблемы, искать материалы, читать
+    сложные тексты, в том числе на иностранных языках, выводить новые
+    знания из уже имеющихся и проверять их опытным путем.  А еще
+    тренироваться публично выступать и писать связные тексты.
 
 
 - name: Инженер
