--- a/_data/projects/education.yml
+++ b/_data/projects/education.yml
@@ -1,27 +1,59 @@
 header: Образовательные проекты
 id: teaching
-description: Если хочешь что-то по-настоящему изучить, научи этому других
+description: Одно дело — знать самому.  Другое — научить других
 
 cards:
 - name: Английский язык
   links:
-    - name: Перейти на сайт
+    - name: Коллекция материалов
       url: https://konstantin-morenko.ru/english-collection/
   since: 2022
 
   quote: Это не иностранный язык, это международный язык
   description: |
 
-    Сначала было нужно читать много-много разной документации на
-    английском.  И все это по программированию.  Потом понадобилось
-    искать ответы на вопросы не только в Рунете.  Дальше был New
-    Scientist.  Дальше как-то само собой получилось: подкасты, лекции,
-    видео.  Английский для меня — дверь в мир самых разных стран и
-    народов.
+    Когда я начал учить других английскому языку (в основном, своих
+    друзей), я понял, что мне предстоит еще многое узнать.  По-новому
+    взглянуть на уже известные мне вещи.  Реальное знание английского
+    языка значительно расширяет перспективы.  И дело не только в
+    карьере.  Узнавая другую культуру, взаимодействуя с ней, многое
+    понимаешь и о самом себе.  А язык — один из самых важных
+    культурных продуктов.
 
 - name: Коммерциализация научных разработок
+  since: 2022
 
-- name: Управление проектами и процессами
+  quote: Важно не только сделать превосходный продукт, важно еще и продать его
+  description: |
+
+    Все началость как небольшой экскурс в экономику и в проблему
+    коммерциализации инновационных продуктов и научных разработок.
+    Проект все еще в начальной стадии, но может использоваться как
+    учебное пособие для студентов.
 
 - name: Электротехнологии и аккумуляторы
+  links:
+    - name: Справочник по аккумуляторам и электрическим технологиям
+      link: https://battery-info.ru
+  since: 2013
+  till: 2015
 
+  quote:
+  description: |
+
+    Проект начался как перевод статей, но со временем превратился в
+    целый справочник.
+
+- name: Возобновляемая энергетика
+  links:
+    - name: 300 вопросов и ответов
+      link: https://battery-info.ru
+  since: 2022
+
+  quote:
+  description: |
+
+    Возобновляемая энергетика становится все более популярной.  Этому
+    способствует как технологический прогресс, так и забота об
+    экологии.  Для аспирантов, изучающих вопросы возобновляемой
+    энергетики.
