--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -44,3 +44,9 @@ list:
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
   description: Лучшая в мире издательская система
+
+- title: Графический редактор GIMP
+  date: апрель 2022
+  place: Национальный открытый университет ИНТУИТ
+  value: 72 часа
+  description: Когда нужно отредактировать фотографию
