--- a/_data/about.yml
+++ b/_data/about.yml
@@ -15,3 +15,6 @@ traits:
 - Кандидат технических наук
 - Два иностранных языка
 - Четыре квалификации по дипломам
+- Дома и на работе — только Linux
+- Владею методом слепой печати на клавиатуре
+- Любимый текстовый редактор — Emacs
