--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,6 +1,6 @@
 photo_file: photo.jpg
 quote: |
-  У меня столько же интересов, сколько огоньков на газовой конфорке
+  Жизнь — удивительное приключение: в ней столько всего интересного
 text: |
 
   С детства меня интересуют самые разные штуки.  Меня интересуют и
@@ -16,5 +16,5 @@ traits:
 - Два иностранных языка
 - Четыре квалификации по дипломам
 - Дома и на работе — только Linux
-- Владею методом слепой печати на клавиатуре
-- Любимый текстовый редактор — Emacs
+- Слепой методом печати на клавиатуре
+- Текстовый редактор — Emacs
