--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -55,6 +55,11 @@ cards:
     электричества, например, в электромобилях.  Можно ли изменить
     мир с помощью электричества?  Однозначно.
 
+    Изучение электрических схем учит понимать процессы по их
+    схематичным изображениям и находить неисправности по косвенным
+    признакам.  Учит понимать суть проблемы, отбрасывая несущественные
+    детали.
+
 
 - name: Экономист-менеджер
   speciality: Экономика и управление на предприятии (агропромышленного комплекса)
