--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -50,3 +50,9 @@ list:
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
   description: Когда нужно отредактировать фотографию
+
+- title: Инновационный менеджмент
+  date: июнь 2022
+  place: Национальный открытый университет ИНТУИТ
+  value: 72 часа
+  description: Новшество как особенность современного мира
