--- a/_data/books.yml
+++ b/_data/books.yml
@@ -5,6 +5,31 @@ description: |
   времен изобретения письменности
 cards:
 
+- name: БесСмертная
+  categories: [роман, проза]
+  year: 2016
+  value:
+    number: 200
+    metric: страницы
+    source: По данным ЛитРес
+  links:
+  - name: Ridero
+    url: https://ridero.ru/books/bes_smertnaya/#moreDetails
+  - name: ЛитРес
+    url: https://www.litres.ru/maks-knopka/bes-smertnaya-misticheskiy-eroticheskiy-roman/
+  isbn: 9785447483821
+
+  quote: Где кончается сон и начинается явь?
+  description: |
+
+    Парень, писатель по профессии, «случайно» знакомится с девушкой. С
+    самого начала знакомства она кажется ему странной загадкой,
+    мистическим воплощением сверхъестественной сущности. Постепенно
+    между ними укрепляются отношения, они начинают дружить. В поисках
+    вдохновения для новых идей парень соглашается на авантюры, которые
+    задумывает девушка, ещё не подозревая, к чему они могут привести
+    его…
+
 - name: Как написать книгу
   categories: [руководство, учебник]
   year: 2018
@@ -27,3 +52,32 @@ cards:
     поддержкой друзей и как рассчитать свои силы, чтобы их хватило до
     конца путешествия, на что нужно обращать внимание в дороге и где
     прекрасные виды — об этом и многом другом я расскажу в книге.
+
+- name: "Английский язык: карманный справочник"
+  categories: [руководство, учебник]
+  year: 2022
+  value:
+    number: 115
+    metric: страницы
+    source: Из расчета 1.5 тысячи символов на страницу
+  links:
+  - name: Сайт
+    url: https://konstantin-morenko.ru/english-collection/
+
+  quote: Английский язык это не иностранный язык, это международный язык
+  description: |
+
+    Когда я начал учить других английскому языку (в основном, своих
+    друзей), я понял, что мне предстоит еще многое узнать.  По-новому
+    взглянуть на уже известные мне вещи.  Реальное знание английского
+    языка значительно расширяет перспективы.  И дело не только в
+    карьере.  Узнавая другую культуру, взаимодействуя с ней, многое
+    понимаешь и о самом себе.  А язык — один из самых важных
+    культурных продуктов.
+
+    В справочнике приведены базовые сведения по фонетике, грамматике и
+    лексике английского языка. Справочник поможет систематизировать
+    имеющиеся знания в области английского языка, расширить и углубить
+    понимание основных концепций. Справочник полезен изучающим
+    английский язык самостоятельно или с преподавателем, а так же всем
+    интересующимся.
