--- a/_data/books.yml
+++ b/_data/books.yml
@@ -81,3 +81,31 @@ cards:
     понимание основных концепций. Справочник полезен изучающим
     английский язык самостоятельно или с преподавателем, а так же всем
     интересующимся.
+
+- name: Она
+  categories: [поэзия]
+  year: 2022
+  value:
+    number: 60
+    metric: страницы
+    source: По данным Ridero
+  links:
+  - name: Ridero
+    url: https://ridero.ru/books/ona_13/
+  - name: ЛитРес
+    url: https://www.litres.ru/konstantin-morenko/ona/
+  isbn: 978-5-0056-6600-0
+
+  quote: Она меняла свои обличия как перчатки, всегда оставаясь самой собой
+  description: |
+
+    Все стихи всегда пишутся об одном и том же. Какой бы формы и цвета
+    они ни были, их содержание всегда одинаково. Как бы мы ни
+    старались написать что-то другое, всегда будет получаться именно
+    так. И эта книга тоже о том же самом. О самом главном.
+
+    Когда я впервые повстречал её, она была совсем другой. Потом мы
+    потеряли друг друга из виду. Но вскоре я встретил её снова. В
+    другом обличье и с другими манерами, но, несомненно, это была
+    она. Снова и снова я встречал её. Но потом она пропала, и я не
+    знаю, встречу ли я её снова. Может быть, она услышит меня?
