--- a/_data/books.yml
+++ b/_data/books.yml
@@ -17,7 +17,7 @@ cards:
     url: https://ridero.ru/books/bes_smertnaya/#moreDetails
   - name: ЛитРес
     url: https://www.litres.ru/maks-knopka/bes-smertnaya-misticheskiy-eroticheskiy-roman/
-  isbn: 9785447483821
+  isbn: 978-5-4474-8382-1
 
   quote: Где кончается сон и начинается явь?
   description: |
@@ -42,7 +42,7 @@ cards:
     url: https://ridero.ru/books/kak_napisat_knigu_2/
   - name: ЛитРес
     url: https://www.litres.ru/konstantin-morenko/kak-napisat-knigu/
-  isbn: 9785449095220
+  isbn: 978-5-4490-9522-0
 
   quote: Как рассказать другим о своих знаниях
   description: |
