Next book (habits)

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -109,3 +109,33 @@ cards:
     другом обличье и с другими манерами, но, несомненно, это была
     она. Снова и снова я встречал её. Но потом она пропала, и я не
     знаю, встречу ли я её снова. Может быть, она услышит меня?
+
+- name: Развить привычку
+  categories: [руководство, учебник]
+  year: 2022-07-02
+  value:
+    number: 176
+    metric: страницы
+    source: По данным Ridero
+  links:
+  - name: Ridero
+    url: https://ridero.ru/books/razvit_privychku/
+  - name: ЛитРес
+    url: https://www.litres.ru/konstantin-morenko/razvit-privychku/
+  isbn: 978-5-0056-7041-0
+
+  quote: Что может быть сильнее привычки?  Только привычка развивать привычки
+  description: |
+
+    Сколько раз каждый из нас начинал новую жизнь с понедельника? И
+    сколько раз это удавалось? Все знают, что привычки — реальный и
+    очень мощный инструмент. Но как же им пользоваться? Эта книга
+    приоткрывает завесу таинственности над процессом развития
+    привычек. Раскладывает по полочкам отдельные шаги, которые ведут к
+    успешному развитию привычек. Книга станет вашим надежным спутником
+    на пути понимания и использования этой фантастической силы —
+    привычки.
+
+    Наши привычки определяют нашу жизнь гораздо сильнее, чем мы можем
+    себе представить.  И мне всегда было интересно хотя бы попробовать
+    их силу.  В этот раз мне это удалось.
