--- a/_data/certificates.yml
+++ b/_data/certificates.yml
@@ -15,7 +15,7 @@ list:
   date: июль 2015
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
-  description: Как заставить компьютер делать то, что хочу я
+  description: Как заставить компьютер делать скучные вычисления
 
 - title: Английский язык
   date: май 2018
@@ -31,7 +31,7 @@ list:
   date: октябрь 2021
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
-  description: Внутренний мир операционной системы
+  description: Что внутри компьютера?
 
 - title: Операционная система Linux
   date: октябрь 2021
@@ -43,16 +43,16 @@ list:
   date: март 2022
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
-  description: Лучшая в мире издательская система
+  description: Издать книгу?  Не проблема!
 
 - title: Графический редактор GIMP
   date: апрель 2022
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
-  description: Когда нужно отредактировать фотографию
+  description: Пририсовать рожки на фотографии
 
 - title: Инновационный менеджмент
   date: июнь 2022
   place: Национальный открытый университет ИНТУИТ
   value: 72 часа
-  description: Новшество как особенность современного мира
+  description: Прогресс не остановить!
