--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -84,7 +84,7 @@ cards:
     получить максимальное количество денег?
 
 
-- name: Профессиональное веб-программирование
+- name: Веб-программист
   speciality: Профессиональное веб-программирование
   level: Профессиональная переподготовка
   university:  НОЧУ ДПО Национальный открытый университет ИНТУИТ
