English teacher diploma

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -14,7 +14,7 @@ text: |
 traits:
 - Кандидат технических наук
 - Два иностранных языка
-- Четыре квалификации по дипломам
+- Пять квалификаций по дипломам
 - Дома и на работе — только Linux
 - Слепой методом печати на клавиатуре
 - Текстовый редактор — Emacs
