--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -102,3 +102,23 @@ cards:
     пользователей.  Как изменить внешнее оформление сайта, не затронув
     содержимого.  Интернет — поистине великая вещь.  Но великой ее
     делают отдельные сайты.
+
+- name: Учитель, преподаватель английского языка
+  speciality: Английский язык в образовательных организациях
+  level: Профессиональная переподготовка
+  university:  Московская академия профессиональных компетенций
+  years: 2021–2022
+  link:
+    name: pedcampus.ru
+    url: https://pedcampus.ru
+  hours: 1320 часов
+  quote: Научить языку международного общения?  Легко!
+  description: |
+
+    Одно дело, когда знаешь сам, но совсем другое, когда кого-то нужно
+    научить.  История развития педагогической мысли "с древних времен и
+    до наших дней".  Учить иностранному языку, значит, учить
+    иностранной культуре.  Учить понимать людей, которые смотрят на
+    свою жизнь с совершенно другой точки зрения.  Иностранный язык —
+    не способ общения, а сокровищница культуры.  Английский — теперь
+    уже международной культуры.
