--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,4 @@
-photo_file: photo.jpg
+photo_file: portrait/2022.jpg
 quote: |
   Жизнь — удивительное приключение: в ней столько всего интересного
 text: |
