--- a/_data/about.yml
+++ b/_data/about.yml
@@ -16,5 +16,5 @@ traits:
 - Два иностранных языка
 - Пять квалификаций по дипломам
 - Дома и на работе — только Linux
-- Слепой методом печати на клавиатуре
+- Слепой метод печати на клавиатуре
 - Текстовый редактор — Emacs
