Book Rhythm work

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -45,6 +45,7 @@ cards:
     задумывает девушка, ещё не подозревая, к чему они могут привести
     его…
 
+
 - name: Как написать книгу
   categories: [руководство, учебник]
   year: 2018-06-01
@@ -67,6 +68,7 @@ cards:
     поддержкой друзей и как рассчитать свои силы, чтобы их хватило до
     конца путешествия, на что нужно обращать внимание в дороге и где
     прекрасные виды — об этом и многом другом я расскажу в книге.
+
 
 - name: "Английский язык: карманный справочник"
   categories: [руководство, учебник]
@@ -97,6 +99,7 @@ cards:
     английский язык самостоятельно или с преподавателем, а так же всем
     интересующимся.
 
+
 - name: Она
   categories: [поэзия]
   year: 2022-06-20
@@ -124,6 +127,7 @@ cards:
     другом обличье и с другими манерами, но, несомненно, это была
     она. Снова и снова я встречал её. Но потом она пропала, и я не
     знаю, встречу ли я её снова. Может быть, она услышит меня?
+
 
 - name: Развить привычку
   categories: [руководство, учебник]
@@ -154,3 +158,29 @@ cards:
     Наши привычки определяют нашу жизнь гораздо сильнее, чем мы можем
     себе представить.  И мне всегда было интересно хотя бы попробовать
     их силу.  В этот раз мне это удалось.
+
+
+- name: Ритмичная работа
+  categories: [руководство, учебник]
+  year: 2022-10-13
+  value:
+    number: 176
+    metric: страницы
+    source: По данным Ridero
+  links:
+  - name: Ridero
+    url: https://ridero.ru/books/ritmichnaya_rabota/
+  - name: ЛитРес
+    url: https://www.litres.ru/konstantin-morenko/ritmichnaya-rabota/
+  isbn: 978-5-0059-0920-6
+
+  quote: Ритмы окружают нас повсюду, даже в работе
+  description: |
+
+    Вся наша жизнь подчинена ритмам.  Быстрым, вроде ударов сердца, и
+    медленным, вроде смены времен года.  Где-то между ними есть наши
+    ритмы работы и отдыха.  Работая в согласии с этими ритмами, мы
+    можем полностью раскрыть свои способности.  Так как же найти свой
+    собственный ритм для работы и как извлечь из него максимум пользы?
+    Как поймать свою "волну", работать продуктивно и эффективно?  Об
+    этом и многом другом рассказывает эта книга.
