--- a/_data/projects/education.yml
+++ b/_data/projects/education.yml
@@ -37,7 +37,7 @@ cards:
 - name: Возобновляемая энергетика
   links:
     - name: 300 вопросов и ответов
-      link: https://battery-info.ru
+      link: https://konstantin-morenko.ru/phd-renewable-book/
   since: 2022
 
   quote:
