Programming language added

--- a/_data/microchip.yml
+++ b/_data/microchip.yml
@@ -7,6 +7,7 @@ cards:
 - name: Счетчик моточасов
   platform: PIC16F628A
   years: 2014, 2022
+  language: C
   SLOC: 466
 
   quote: Простой и незамысловатый счетчик времени — что может быть важнее?
