--- a/_data/microchip.yml
+++ b/_data/microchip.yml
@@ -22,3 +22,20 @@ cards:
     моточасов без кнопок вообще.  Но дальше — больше.  Помимо счета
     общего времени он еще считает и количество включений и текущее
     время.  И работает с 2014 года без ошибок!
+
+- name: Отпугиватель мышей и крыс
+  platform: PIC16F684
+  years: 2022
+  language: C
+  SLOC: 279
+  releases: 7
+
+  quote: Когда мыши одолевают — просто сыграй им музыку
+  description: |
+
+    В сельском доме всегда есть одна проблема — мыши.  С древнейших
+    времен кошки верно служат людям, помогая бороться с этими
+    грызунами.  Но как быть, если кошки не справляются?  Даже Том был
+    не в состоянии справиться с Джерри.  Но выход есть: мышам (и
+    крысам) просто нужно сыграть музыку.  Ультразвуковую музыку.  Они
+    сразу поймут, что здесь им больше делать нечего.
