--- a/_data/microchip.yml
+++ b/_data/microchip.yml
@@ -41,6 +41,23 @@ cards:
     общего времени он еще считает и количество включений и текущее
     время.  И работает с 2014 года без ошибок!
 
+- name: Электронные часы с датой
+  platform: PIC16F886
+  years: 2014–2018
+  language: C
+  SLOC: 1542
+  releases: 4
+
+  quote: Что есть в каждом доме?  Часы!
+  description: |
+
+    Какое самое простое и полезное устройство может сделать начинающий
+    радиолюбитель?  Конечно же — часы!  Часы, один взгляд на которые
+    сразу напомнит обо всех трудностях, которые пришлось преодолеть, и
+    обо всех победах, которые удалось одержать.  Живой пример успеха в
+    программировании, которым пользуешься каждый день.  А потом можно
+    добавить в них дату, будильник и таймер.
+
 - name: Частотомер
   platform: PIC16F628A
   years: 2015
@@ -74,6 +91,39 @@ cards:
     цветам на подоконнике?  Для всех этих задач нам нужен термометр.
     Простой электронный термометр с тремя датчиками температуры.
 
+- name: Монитор параметров электрических цепей
+  platform: Arduino Mega
+  years: 2021
+  language: C++
+  SLOC: 600
+  releases: 3
+
+  quote: Об экспериментальных установках нужно знать все и даже больше
+  description: |
+
+    Когда дело доходит до испытаний новых устройств, нужно собрать
+    максимальное количество данных.  И чем быстрее — тем лучше.
+    Помочь в этом может устройство, автоматически собирающее данные об
+    электрических цепях.  Человек не сможет так быстро записывать
+    данные, но машина не способна обработать их и сделать правильные
+    выводы.
+
+- name: Калибратор датчиков INA226
+  platform: Arduino Mega
+  years: 2022
+  language: C++
+  SLOC: 168
+  releases: 2
+
+  quote: Мало сделать точный датчик, его еще нужно проверить
+  description: |
+
+    Когда приходится использовать много однотипных датчиков, неизбежно
+    сталкиваешься с проблемой их идентификации и настройки.  Если
+    датчиков всего лишь три, то все это можно сделать вручную.  Но
+    если их три десятка?  Лучше доверить этот процесс системе
+    автоматики.  Системе автоматической калибровки датчиков INA226.
+
 - name: Отпугиватель мышей и крыс
   platform: PIC16F684
   years: 2022
@@ -90,3 +140,4 @@ cards:
     не в состоянии справиться с Джерри.  Но выход есть: мышам (и
     крысам) просто нужно сыграть музыку.  Ультразвуковую музыку.  Они
     сразу поймут, что здесь им больше делать нечего.
+
