--- a/_data/books.yml
+++ b/_data/books.yml
@@ -32,6 +32,8 @@ cards:
     url: https://ridero.ru/books/bes_smertnaya/#moreDetails
   - name: ЛитРес
     url: https://www.litres.ru/maks-knopka/bes-smertnaya-misticheskiy-eroticheskiy-roman/
+  - name: Онлайн
+    url: https://konstantin-morenko.ru/immortal-book/
   isbn: 978-5-4474-8382-1
 
   quote: Где кончается сон и начинается явь?
