--- a/_data/about.yml
+++ b/_data/about.yml
@@ -15,6 +15,6 @@ traits:
 - Кандидат технических наук
 - Два иностранных языка
 - Пять квалификаций по дипломам
-- Дома и на работе — только Linux
+- Фанат Linux и Emacs
 - Слепой метод печати на клавиатуре
-- Текстовый редактор — Emacs
+- Нет соцсетей
